--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!-- \\\\\\\\\\\\\\\\\\\\\\\\ HEADER ///////////////////-->
-    <header>
+    <header class="header">
       <div class="container transfer">
         <nav class="header-nav">
           <a
@@ -59,7 +59,7 @@
     <!--\\\\\\\\\\\\\\\\\\\\\\\\ HERO //////////////////-->
     <main>
       <section class="portfolio">
-        <div class="container btm-flax">
+        <div class="container">
           <h1 class="visually-hidden">Фільтри</h1>
           <ul class="filter-list-btm list">
             <li class="filter-item">
@@ -84,16 +84,16 @@
           <h2 class="visually-hidden">Портфоліо.Види робіт</h2>
           <ul class="portfolio-list list">
             <li class="portfolio-examples">
-              <div>
-                <a class="portfolio-link" href=""
-                  ><img
-                    src="./images/portfolio-1.jpg"
-                    alt="Технокряк"
-                    width="370"
-                /></a>
+              <a class="portfolio-link" href=""
+                ><img
+                  src="./images/portfolio-1.jpg"
+                  alt="Технокряк"
+                  width="370"
+              /></a>
+              <div class="div-title">
+                <h3 class="examples-title">Технокряк</h3>
+                <p class="portfolio-text">Веб-сайт</p>
               </div>
-              <h3 class="examples-title">Технокряк</h3>
-              <p class="portfolio-text">Веб-сайт</p>
             </li>
             <li class="portfolio-examples">
               <a class="portfolio-link" href=""
@@ -102,10 +102,12 @@
                   alt="Постер NO vs GS"
                   width="370"
               /></a>
-              <h3 class="examples-title" lang="en">
-                Постер New Orlean vs Golden Star
-              </h3>
-              <p class="portfolio-text">Дизайн</p>
+              <div class="div-title">
+                <h3 class="examples-title" lang="en">
+                  Постер New Orlean vs Golden Star
+                </h3>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
             </li>
             <li class="portfolio-examples">
               <a class="portfolio-link" href=""
@@ -114,8 +116,10 @@
                   alt="Ресторан Seafood"
                   width="370"
               /></a>
-              <h3 class="examples-title" lang="en">Ресторан Seafood</h3>
-              <p class="portfolio-text">Додаток</p>
+              <div class="div-title">
+                <h3 class="examples-title" lang="en">Ресторан Seafood</h3>
+                <p class="portfolio-text">Додаток</p>
+              </div>
             </li>
             <li class="portfolio-examples">
               <a class="portfolio-link" href=""
@@ -124,8 +128,10 @@
                   alt="Проєкт Prime"
                   width="370"
               /></a>
-              <h3 class="examples-title" lang="en">Проєкт Prime</h3>
-              <p class="portfolio-text">Маркетинг</p>
+              <div class="div-title">
+                <h3 class="examples-title" lang="en">Проєкт Prime</h3>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
             </li>
             <li class="portfolio-examples">
               <a class="portfolio-link" href=""
@@ -134,8 +140,10 @@
                   alt="Проєкт Boxes"
                   width="370"
               /></a>
-              <h3 class="examples-title" lang="en">Проєкт Boxes</h3>
-              <p class="portfolio-text">Додаток</p>
+              <div class="div-title">
+                <h3 class="examples-title" lang="en">Проєкт Boxes</h3>
+                <p class="portfolio-text">Додаток</p>
+              </div>
             </li>
             <li class="portfolio-examples">
               <a class="portfolio-link" href=""
@@ -144,10 +152,12 @@
                   alt="Inspiration has no Borders"
                   width="370"
               /></a>
-              <h3 class="examples-title" lang="en">
-                Inspiration has no Borders
-              </h3>
-              <p class="portfolio-text">Веб-сайт</p>
+              <div class="div-title">
+                <h3 class="examples-title" lang="en">
+                  Inspiration has no Borders
+                </h3>
+                <p class="portfolio-text">Веб-сайт</p>
+              </div>
             </li>
             <li class="portfolio-examples">
               <a class="portfolio-link" href=""
@@ -156,8 +166,12 @@
                   alt="Видання Limited Edition"
                   width="370"
               /></a>
-              <h3 class="examples-title" lang="en">Видання Limited Edition</h3>
-              <p class="portfolio-text">Дизайн</p>
+              <div class="div-title">
+                <h3 class="examples-title" lang="en">
+                  Видання Limited Edition
+                </h3>
+                <p class="portfolio-text">Дизайн</p>
+              </div>
             </li>
             <li class="portfolio-examples">
               <a class="portfolio-link" href=""
@@ -166,8 +180,10 @@
                   alt="Проєкт LAB"
                   width="370"
               /></a>
-              <h3 class="examples-title" lang="en">Проєкт LAB</h3>
-              <p class="portfolio-text">Маркетинг</p>
+              <div class="div-title">
+                <h3 class="examples-title" lang="en">Проєкт LAB</h3>
+                <p class="portfolio-text">Маркетинг</p>
+              </div>
             </li>
             <li class="portfolio-examples">
               <a class="portfolio-link" href=""
@@ -176,8 +192,10 @@
                   alt="Growing Business"
                   width="370"
               /></a>
-              <h3 class="examples-title" lang="en">Growing Business</h3>
-              <p class="portfolio-text">Додаток</p>
+              <div class="div-title">
+                <h3 class="examples-title" lang="en">Growing Business</h3>
+                <p class="portfolio-text">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
