--- a/index.html
+++ b/index.html
@@ -140,8 +140,10 @@
                   width="270"
                 />
               </a>
-              <h3 class="hero-team-person">Ігор Дем'яненко</h3>
-              <p class="hero-team-text" lang="en">Product Designer</p>
+              <div class="hero-team-div">
+                <h3 class="hero-team-person">Ігор Дем'яненко</h3>
+                <p class="hero-team-text" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="hero-team-item">
               <a class="hero-team-link" href="">
@@ -151,8 +153,10 @@
                   width="270"
                 />
               </a>
-              <h3 class="hero-team-person">Ольга Рєпіна</h3>
-              <p class="hero-team-text" lang="en">Frontend Developer</p>
+              <div class="hero-team-div">
+                <h3 class="hero-team-person">Ольга Рєпіна</h3>
+                <p class="hero-team-text" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="hero-team-item">
               <a class="hero-team-link" href="">
@@ -162,8 +166,10 @@
                   width="270"
                 />
               </a>
-              <h3 class="hero-team-person">Микола Тарасов</h3>
-              <p class="hero-team-text" lang="en">Marketing</p>
+              <div class="hero-team-div">
+                <h3 class="hero-team-person">Микола Тарасов</h3>
+                <p class="hero-team-text" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="hero-team-item">
               <a class="hero-team-link" href="">
